# fuel-nailgun-extension-iac

./: .gitignore  .gitreview  CONTRIBUTING.rst  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
doc/: api.md  cli.md
fuel_external_git/: alembic.ini  audit.py  const.py  default_whitelist.yaml  extension.py  fuel_client.py  fuelclient.py  fuelclient_audit.py  fuelclient_gitrepo.py  handlers.py  json_schema.py  models.py  objects.py  openstack_config.py  settings.py  settings.yaml  utils.py
fuel_external_git/drivers/: openstack_config.py  yaml_driver.py
fuel_external_git/migrations/: env.py
fuel_external_git/migrations/versions/: 8736ad38ca31_add_whitelist_table.py  954d4c3a76be_add_unique_constaint_to_whitelist_rule_.py  adb78f70605d_manage_fuel_node_flag.py  d59114c46ac4_change_constrains.py  e3b840e64e53_init.py  fc4f164a7b6c_extended_whitelist_with_task_name.py
fuel_external_git/templates/gitrepo/tools/: show-config-for.py
fuel_external_git/tests/: base.py  test_openstack_config.py  test_utils.py
fuel_external_git/tests/cfgs/: nova.conf  overrides.yaml
fuel_external_git/tests/cfgs/controller_configs/: nova.conf
fuel_external_git/tests/cfgs/node_1_configs/: nova.conf
specs/: fuel-nailgun-extension-iac.spec
