[metadata]
name = fuel_external_git
summary = Nailgun extension which uses git repo for config files
description-file = README.md
author = Dmitry Ukov
author-email = dukov@mirantis.com
home-page = http://mirantis.com
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    fuel_external_git

[entry_points]
nailgun.extensions:
    fuel_external_git = fuel_external_git.extension:ExternalGit
fuelclient:
    gitrepo_list = fuel_external_git.fuelclient:GitRepoList
    gitrepo_create = fuel_external_git.fuelclient:AddRepo
    gitrepo_delete = fuel_external_git.fuelclient:DeleteRepo
    gitrepo_update = fuel_external_git.fuelclient:UpdateRepo
    gitrepo_init = fuel_external_git.fuelclient:InitRepo
    gitrepo_get_configs = fuel_external_git.fuelclient:DownloadConfgs
    gitrepo_audit = fuel_external_git.fuelclient:AuditRun
    gitrepo_outofsync = fuel_external_git.fuelclient:OutOfSyncResources
