[metadata]
name = fuel_external_git
summary = Nailgun extension which uses git repo for config files
description-file = README.md
author = Dmitry Ukov
author-email = dukov@mirantis.com
home-page = http://mirantis.com
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    fuel_external_git

[entry_points]
nailgun.extensions:
    fuel_external_git = fuel_external_git.extension:ExternalGit
fuelclient:
    gitrepo_list = fuel_external_git.fuel_client:GitRepoList
    gitrepo_create = fuel_external_git.fuel_client:AddRepo
    gitrepo_delete = fuel_external_git.fuel_client:DeleteRepo
    gitrepo_update = fuel_external_git.fuel_client:UpdateRepo
    gitrepo_init = fuel_external_git.fuel_client:InitRepo
    gitrepo_get_configs = fuel_external_git.fuel_client:DownloadConfgs
    gitrepo_audit = fuel_external_git.fuel_client:AuditRun
    gitrepo_outofsync = fuel_external_git.fuel_client:OutOfSyncResources
    gitrepo_audit-enforce = fuel_external_git.fuel_client:AuditEnforce
