[metadata]
name = fuel_external_git
summary = Nailgun extension which uses git repo for config files
description-file = README.md
author = Dmitry Ukov
author-email = dukov@mirantis.com
home-page = http://mirantis.com
classifier =
    Development Status :: 3 - Alpha
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    fuel_external_git

[entry_points]
nailgun.extensions:
    fuel_external_git = fuel_external_git.extension:ExternalGit
fuelclient:
    gitrepo_list = fuel_external_git.fuelclient_gitrepo:GitRepoList
    gitrepo_create = fuel_external_git.fuelclient_gitrepo:AddRepo
    gitrepo_delete = fuel_external_git.fuelclient_gitrepo:DeleteRepo
    gitrepo_update = fuel_external_git.fuelclient_gitrepo:UpdateRepo
    gitrepo_init = fuel_external_git.fuelclient_gitrepo:InitRepo
    gitrepo_get_configs = fuel_external_git.fuelclient_gitrepo:DownloadConfgs
    audit_enforce = fuel_external_git.fuelclient_audit:Audit
    audit_noop = fuel_external_git.fuelclient_audit:AuditRun
    audit_list_outofsync = fuel_external_git.fuelclient_audit:OutOfSyncResources
    audit_whitelist_show = fuel_external_git.fuelclient_audit:WhitelistRulesShow
    audit_whitelist_add = fuel_external_git.fuelclient_audit:WhitelistRuleAdd
    audit_whitelist_load_fromfile = fuel_external_git.fuelclient_audit:WhitelistRuleAddFromFile
    audit_whitelist_delete = fuel_external_git.fuelclient_audit:WhitelistRuleDelete
